// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2 column stacking 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-2 column stacking23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="2 column stacking23456"
    >
      <div
        class="lf-row"
        id="2 column stacking-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-b123456"
          style="--lf-span: 24; --lf-span-md: 6;"
        >
          <div
            id="b123456"
          >
            <div
              class="lf-row"
              id="b1-content23456"
              style="flex-wrap: wrap;"
            >
              <div
                class="lf-col"
                id="bl-tile_one23456"
                style="--lf-span: 24; --lf-span-md: 24; height: 80px;"
              >
                <div
                  id="tile_one23456"
                  style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                >
                  tile_one23456
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-b223456"
          style="--lf-span: 24; --lf-span-md: 18;"
        >
          <div
            id="b223456"
          >
            <div
              class="lf-row"
              id="b2-content23456"
              style="flex-wrap: wrap;"
            >
              <div
                class="lf-col"
                id="bl-tile_two23456"
                style="--lf-span: 24; --lf-span-md: 24; height: 40px;"
              >
                <div
                  id="tile_two23456"
                  style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                >
                  tile_two23456
                </div>
              </div>
              <div
                class="lf-col"
                id="bl-tile_three23456"
                style="--lf-span: 24; --lf-span-md: 12; height: 20px;"
              >
                <div
                  id="tile_three23456"
                  style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                >
                  tile_three23456
                </div>
              </div>
              <div
                class="lf-col"
                id="bl-tile_four23456"
                style="--lf-span: 24; --lf-span-md: 12; height: 30px;"
              >
                <div
                  id="tile_four23456"
                  style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                >
                  tile_four23456
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-4 block grid23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="4 block grid23456"
    >
      <div
        class="lf-row"
        id="4 block grid-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-tile_one23456"
          style="--lf-span: 24; --lf-span-md: 12;"
        >
          <div
            id="tile_one23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_two23456"
          style="--lf-span: 24; --lf-span-md: 12;"
        >
          <div
            id="tile_two23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_three23456"
          style="--lf-span: 24; --lf-span-md: 12;"
        >
          <div
            id="tile_three23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_four23456"
          style="--lf-span: 24; --lf-span-md: 12;"
        >
          <div
            id="tile_four23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid with gutter 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-4 block grid with gutter23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="4 block grid with gutter23456"
    />
  </div>
</div>
`;

exports[`4 block grid with various heights 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-4 block grid with various heights23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="4 block grid with various heights23456"
    />
  </div>
</div>
`;

exports[`4 sequential blocks 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-4 sequential blocks23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="4 sequential blocks23456"
    >
      <div
        class="lf-row"
        id="4 sequential blocks-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-tile_one23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="tile_one23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_two23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="tile_two23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_three23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="tile_three23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_four23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="tile_four23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`typical dashboard 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-typical dashboard23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="typical dashboard23456"
    >
      <div
        class="lf-row"
        id="typical dashboard-content23456"
        style="--lf-gap-x: 10px; --lf-gap-y: 10px; flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-tile_one23456"
          style="--lf-span: 24; --lf-span-md: 8; height: 80px;"
        >
          <div
            id="tile_one23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_two23456"
          style="--lf-span: 24; --lf-span-md: 8; height: 80px;"
        >
          <div
            id="tile_two23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_three23456"
          style="--lf-span: 24; --lf-span-md: 8; height: 80px;"
        >
          <div
            id="tile_three23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_four23456"
          style="--lf-span: 24; --lf-span-md: 12; height: 80px;"
        >
          <div
            id="tile_four23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_four23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_five23456"
          style="--lf-span: 24; --lf-span-md: 12; height: 80px;"
        >
          <div
            id="tile_five23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_five23456
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tile_six23456"
          style="--lf-span: 24; --lf-span-md: 24; height: 80px;"
        >
          <div
            id="tile_six23456"
            style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
          >
            tile_six23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
